--- a/index.html
+++ b/index.html
@@ -157,12 +157,12 @@
                 <div class="box row">
                     <div class="col-6 green">
                         <div class="box">
-                            1col
+                            Nested 6 col
                         </div>
                     </div>
                     <div class="col-6 green">
                         <div class="box">
-                            1col
+                            Nested 6 col
                         </div>
                     </div>
                 </div>
