--- a/bonus-2/index.html
+++ b/bonus-2/index.html
@@ -94,8 +94,8 @@
                     </div>
                 </div>
             </div>
-            <div class="col-6 middle ">
-                <div class="box">
+            <div class="col-6 row">
+                <div class="box middle col-12">
                 </div>
             </div>
             <div class="col-6">
@@ -110,8 +110,8 @@
                     </div>
                 </div>
             </div>
-            <div class="col-6">
-                <div class="box bottom">
+            <div class="col-6 row">
+                <div class="box bottom col-12">
 
                 </div>
             </div>
